example data: earthquake, DJI, DNA, song

--- a/abcstat/front.tex
+++ b/abcstat/front.tex
@@ -49,10 +49,8 @@
   \\copyright:          & \copyrightstamp
   \\license:            & \CCBYNCNDstatement
   \\typesetting engine: & \XeLaTeX
-  \\document url:       & \url{https://www.researchgate.net/project/Signal-Processing-ABCs}
- %\\document url:       & \url{https://www.researchgate.net/profile/Daniel_Greenhoe/publications}
- % \\document url:       & \footnotesize\url{https://www.researchgate.net/project/Mathematical-Structure-and-Design}
- % \\Octave/MatLab code: & \footnotesize\url{https://github.com/dgreenhoe/wavelets}
+  \\document url:       & \url{https://github.com/dgreenhoe/pdfs/blob/master/abcstat.pdf}
+                      \\& \url{https://www.researchgate.net/project/Signal-Processing-ABCs}
 \end{tabular}
 \vfill\mbox{}
 %---------------------------------------
