--- a/common/kl_basis.tex
+++ b/common/kl_basis.tex
@@ -30,22 +30,22 @@ But first, some definitions (next) that are used repeatedly in this chapter.
 \begin{definition}
 \label{def:sstat}
 %---------------------------------------
-Let $\Psi\eqd\set{\fpsi_n}{n=1,2,\ldots,\xN}$ be an \structe{orthonormal basis} 
+Let $\Psi\eqd\set{\fpsi_n}{n=1,2,\ldots,\xN}$ be an \structe{orthonormal basis}
 for a parameterized function $\rvx(t;\theta)$ with parameter $\theta$.
-Let $\fy(t;\theta)$ be $\fx(t;\theta)$ plus a \fncte{random process} $\rvv(t)$ such that 
+Let $\fy(t;\theta)$ be $\fx(t;\theta)$ plus a \fncte{random process} $\rvv(t)$ such that
 \\\indentx$\ds
   \rvy(t;\theta)\eqd\rvx(t;\theta)+\rvv(t)
 $\\
 Let $\fdoty_n$, $\fdotx_n$, and $\fdotv_n$ be \ope{projections}\ifsxref{operator}{def:opP}
-onto the \fncte{basis vector} $\fpsi_n(t)$ such that 
+onto the \fncte{basis vector} $\fpsi_n(t)$ such that
 \defbox{\begin{array}{r c>{\ds}l c>{\ds}l c>{\ds}l D}
     \fdoty_n(\theta) &\eqd& \opP_n\fy(t;\theta) &\eqd& \inprod{\fy(t;\theta)}{\fpsi_n(t)} &\eqd& \int_{t\in\R}\fy(t;\theta)\fpsi_n(t)\dt
   \\\fdotx_n(\theta) &\eqd& \opP_n\fx(t)        &\eqd& \inprod{\fx(t;\theta)}{\fpsi_n(t)} &\eqd& \int_{t\in\R}\fx(t;\theta)\fpsi_n(t)\dt
   \\\fdotv_n         &\eqd& \opP_n\fv(t)        &\eqd& \inprod{\fv(t)}       {\fpsi_n(t)} &\eqd& \int_{t\in\R}\fv(t)       \fpsi_n(t)\dt
 \end{array}}
 \\
-Let the set $\setY$ be defined as $\setY\eqd\set{\fdoty_n(\theta)}{1,2,\ldots,\xN}$ 
-Let $\estMAP$ be the \fncte{MAP estimate} 
+Let the set $\setY$ be defined as $\setY\eqd\set{\fdoty_n(\theta)}{1,2,\ldots,\xN}$
+Let $\estMAP$ be the \fncte{MAP estimate}
 and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
 \end{definition}
 
@@ -103,14 +103,14 @@ Let $\Psi$, $\rvv(t)$, $\fdotv_n$, and $\setY$ be defined as in \prefpp{def:ssta
 %---------------------------------------
 Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$, and $\setY$ be defined as in \prefpp{def:sstat}.
 \lembox{
-  \brb{\begin{array}{FrclDD}
-    (A). & \cov{\fv(t)}{\fv(u)}      &=        & \sigma^2\delta(t-u) & (\propb{white})    
-  \\(B). & \pE\brs{\fv(t)}           &=        & 0                   & (\prope{zero-mean})
+  \brb{\begin{array}{FrclD}
+    (A). & \pE\brs{\fv(t)}           &=        & 0                   & and % (\prope{zero-mean})
+  \\(B). & \mc{3}{l}{\cov{\fv(t)}{\fv(u)} = \sigma^2\delta(t-u)} %& (\propb{white})
   \end{array}}
   \implies
   \brb{\begin{array}{FlclD}
-       (1). & \pE\fdotv_n              &=& 0                      & (\prope{zero-mean})    %& and 
-     \\(2). & \cov{\fdotv_n}{\fdotv_m} &=& \sigma^2 \kdelta_{n-m} & (\prope{uncorrelated}) %& and 
+       (1). & \pE\fdotv_n              &=& 0                      & (\prope{zero-mean})    %& and
+     \\(2). & \cov{\fdotv_n}{\fdotv_m} &=& \sigma^2 \kdelta_{n-m} & (\prope{uncorrelated}) %& and
   \end{array}}
   }
 \end{lemma}
@@ -121,7 +121,7 @@ Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fd
          \pE\fdotv_{n}            &= 0                            && \text{by \prope{additive} property and \prefp{thm:an_stats}}
     \end{align*}
 
-  \item 
+  \item
     \begin{align*}
      \cov{\fdotv_m}{\fdotv_n}
         &= \cov{\inprod{\fv(t)}{\fpsi_m(t)}}{\inprod{\fv(t)}{\fpsi_n(t)}}
@@ -131,10 +131,10 @@ Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fd
                {\brp{\int_{u\in\R} \fv(u) \fpsi_n(u)\du}}
         && \text{by def. of $\inprodn$}
         && \text{\xref{def:sstat}}
-      \\&= \pE\brs{\brp{\int_{t\in\R} \fv(t) \fpsi_m(t)\dt} 
+      \\&= \pE\brs{\brp{\int_{t\in\R} \fv(t) \fpsi_m(t)\dt}
                    \brp{\int_{u\in\R} \fv(u) \fpsi_n(u)\du}}
         && \text{by def. of $\pCov$}
-      \\&= \pE\brs{\int_{t\in\R}\int_{u\in\R} \fv(t)\fv(u) \fpsi_m(t) \fpsi_n(u) \dt\du} 
+      \\&= \pE\brs{\int_{t\in\R}\int_{u\in\R} \fv(t)\fv(u) \fpsi_m(t) \fpsi_n(u) \dt\du}
       \\&= \int_{t\in\R}\int_{u\in\R} \pE\brs{\fv(t)\fv(u)} \fpsi_m(t) \fpsi_n(u) \dt\du
       \\&= \int_{t\in\R}\int_{u\in\R} \sigma^2\delta(t-u) \fpsi_m(t) \fpsi_n(u) \dt\du
         && \text{by \prope{white} hyp.}
@@ -150,7 +150,7 @@ Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fd
         && \text{by \prope{orthonormal} prop.}
         && \text{\xref{def:sstat}}
     \end{align*}
-  
+
 \end{enumerate}
 \end{proof}
 
@@ -161,11 +161,11 @@ Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fd
 %---------------------------------------
 Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$, and $\setY$ be defined as in \prefpp{def:sstat}.
 \lembox{
-  \mcom{\brbr{\begin{array}{FrclD}
+  \brbr{\begin{array}{FrclD}
     (A). & \cov{\fv(t)}{\fv(u)}      &=        & \sigma^2\delta(t-u) & and %& (\propb{white})                 & and
   \\(B). & \fv(t)                    &\sim     & \pN{0}{\sigma^2}    & and %& (\propb{Gaussian})              & and
   \\(C). & \inprod{\fpsi_n}{\fpsi_m} &=        & \kdelta_{mn}        &     %& (\prope{orthonormal})
-  \end{array}}}{\prope{additive white Gaussian} system}
+  \end{array}}
   \implies
   \brbl{\begin{array}{FrclD}
        (1). & \fdotv_n                            &\sim& \pN{0}{\sigma^2}                     & (\prope{Gaussian})
@@ -178,7 +178,7 @@ Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fd
 \begin{enumerate}
   \item Because the operations are \prope{linear} on processes are \prope{Gaussian} (hypothesis C).
 
-  \item 
+  \item
     \begin{align*}
        \pE{\fdotv_{n}}           &= 0                      && \text{by \prope{AWN} properties and \prefp{thm:awn_stats}}
      \\\cov{\fdotv_m}{\fdotv_n}  &= \sigma^2 \kdelta_{mn}  && \text{by \prope{AWN} properties and \prefp{lem:fdotv_white}}
@@ -203,13 +203,13 @@ Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fd
 \index{ML}  \index{maximum likelihood estimation}
 %---------------------------------------
 Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$, and $\setY$ be defined as in \prefpp{def:sstat}.
-Let $\estMAP$ be the \fncte{MAP estimate} 
+Let $\estMAP$ be the \fncte{MAP estimate}
 and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
 \thmbox{
   \brb{\begin{array}{FMD}
-     (A). & $\rvv(t)$ is \prope{zero-mean}                       & and 
+     (A). & $\rvv(t)$ is \prope{zero-mean}                       & and
    \\(B). & $\rvv(t)$ is \prope{white}                           & and
-   \\(C). & $\rvv(t)$ is \prope{Gaussian}                        & 
+   \\(C). & $\rvv(t)$ is \prope{Gaussian}                        &
   \end{array}}
   \implies
   \mcom{\brb{\begin{array}{F rc>{\ds}l D}
@@ -243,7 +243,7 @@ and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
              - \mcom{\sum_{n=1}^\xN \inprod{\rvv(t)}{\fpsi_n(t)}\fpsi_n(t)}{$\rvv(t)-\rvv'(t)$}
        && \begin{array}{@{}M}
             by definition of $\fdoty_n$ and\\
-            \prope{additive} property of $\inprodn$\\ 
+            \prope{additive} property of $\inprodn$\\
             \xref{def:inprod}
           \end{array}
      \\&= \sum_{n=1}^\xN \fdoty_n\fpsi_n(t) +
@@ -253,7 +253,7 @@ and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
 
   \item lemma: $\pE\brs{\fdotv_n\rvv(t)} = N_o\fpsi_n(t)$. Proof: \label{ilem:sstat_vdotv}
     \begin{align*}
-      &\pE\brs{\fdotv_n\rvv(t)} 
+      &\pE\brs{\fdotv_n\rvv(t)}
       \\&\eqd \pE\brs{\brp{\int_{t\in\R}\rvv(u)\fpsi_n(u)\du} \rvv(t)}
         && \text{by definition of $\fdotv_n(t)$}
         && \text{\xref{def:sstat}}
@@ -278,7 +278,7 @@ and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
      \\&= \pE\brs{\Bigg(\inprod{\rvx(t)}{\fpsi_n(t)}+\inprod{\rvv(t)}{\fpsi_n(t)}\Bigg)
               \brp{ \rvv(t)-\sum_{n=1}^\xN \inprod{\rvv(t)}{\fpsi_n(t)}\fpsi_n(t)}}
        && \begin{array}{@{}M}%
-            by \prope{additive} property of\\ 
+            by \prope{additive} property of\\
             $\inprodn$ \xref{def:inprod}%
           \end{array}
      \\&= \pE\brs{\Bigg(\fdotx_n+\fdotv_n\Bigg)
@@ -306,7 +306,7 @@ and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
             \xref{thm:pE_linop}%
           \end{array}
      \\&= 0 - 0
-          + \pE\brs{\fdotv_n\rvv(t)} 
+          + \pE\brs{\fdotv_n\rvv(t)}
           - \sum_{m=1}^\xN N_o\kdelta_{mn} \fpsi_m(t)
        && \text{by \prope{white} hypothesis}
      \\&= N_o\fpsi_n(t) - N_o\fpsi_n(t)
@@ -314,21 +314,21 @@ and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
      \\&= 0
      \\&\implies\text{\propb{uncorrelated}}
   \end{align*}
-  
+
   \item lemma: $\setY$ and $\rvv'(t)$ are \prope{independent}. Proof:
         By \pref{ilem:sstat_uncorrelated}, $\fdoty_n$ and $\rvv'(t)$ are \prope{uncorrelated}.
         By hypothesis, they are \prope{Gaussian}, and thus are also \propb{independent}.
         \label{ilem:sstat_independent}
-  
+
   \item Proof that $\psP\set{\rvx(t;\theta)}{\rvy(t;\theta)}=\psP\set{\rvx(t;\theta)}{\fdoty_1,\;\fdoty_2,\ldots,\fdoty_{\xN}}$:
         \label{item:sstat_P}
-  
+
   \begin{align*}
      \psP\set{\rvx(t;\theta)}{\rvy(t;\theta)}
        &= \psP\set{\rvx(t;\theta)}{\sum_{n=1}^\xN\fdoty_n \fpsi_n(t) + \rvv'(t)}
      \\&= \psP\set{\rvx(t;\theta)}{\setY, \rvv'(t)}
        && \begin{array}{M}
-            because $\setY$ and $\rvv'(t)$ can be\\ 
+            because $\setY$ and $\rvv'(t)$ can be\\
             extracted by $\inprod{\cdots}{\fpsi_n(t)}$
           \end{array}
      \\&= \frac{\psP\set{\setY, \rvv'(t)}{\rvx(t;\theta)}  P\setn{\rvx(t;\theta)} }
@@ -345,11 +345,11 @@ and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
                {\psP\setn{\setY}}
      \\&= \psP\set{\rvx(t;\theta)}{\setY}
        && \begin{array}{@{}M}%
-            by definition of \fncte{conditional probability}\\ 
+            by definition of \fncte{conditional probability}\\
             \xref{def:conprob}
           \end{array}
   \end{align*}
-  
+
   \item Proof that $\setY$ is a \prope{sufficient statistic} for the \vale{MAP estimate}:
   \begin{align*}
      \estMAP
@@ -358,7 +358,7 @@ and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
      \\&=    \argmax_{\estT} \psP\set{\rvx(t;\theta)}{\setY}
        &&    \text{by \pref{item:sstat_P}}
   \end{align*}
-  
+
   \item Proof that $\setY$ is a \prope{sufficient statistic} for the \fncte{ML estimate}:
   \begin{align*}
      \estML
@@ -368,7 +368,7 @@ and $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
      \\&=    \argmax_{\estT} \psP\set{\setY,\rvv'(t)}{\rvx(t;\theta)}
        &&    \text{because $\setY$ and $\rvv'(t)$ can be extracted by  $\inprod{\cdots}{\fpsi_n(t)}$}
      \\&=    \argmax_{\estT} \psP\set{\setY}{\rvx(t;\theta)}\psP\setn{\rvv'(t)}{\rvx(t;\theta)}
-       &&    \text{by \prope{independence} of $\setY$ and $\rvv'(t)$ 
+       &&    \text{by \prope{independence} of $\setY$ and $\rvv'(t)$
                    \xref{ilem:sstat_independent}}
      \\&=    \argmax_{\estT} \psP\set{\setY}{\rvx(t;\theta)}\psP\setn{\rvv'(t)}
        &&    \text{by \prope{independence} of $\rvx(t)$ and $\rvv'(t)$}
@@ -554,9 +554,9 @@ Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fd
   \end{array}}}{\prope{additive white} system}
   \implies
   \brbl{\begin{array}{FlclD}
-       (1). & \pE\fdotv_n                            &=& 0                     & (\prope{zero-mean})    %& and 
-     \\(2). & \pE(\fdoty_n(\theta))                   &=& \fdotx_n(\theta)      &                        %& and 
-     \\(3). & \cov{\fdotv_n}{\fdotv_m}               &=& \sigma^2 \kdelta_{nm} & (\prope{uncorrelated}) %& and 
+       (1). & \pE\fdotv_n                            &=& 0                     & (\prope{zero-mean})    %& and
+     \\(2). & \pE(\fdoty_n(\theta))                   &=& \fdotx_n(\theta)      &                        %& and
+     \\(3). & \cov{\fdotv_n}{\fdotv_m}               &=& \sigma^2 \kdelta_{nm} & (\prope{uncorrelated}) %& and
      \\(4). & \cov{\fdoty_n(\theta)}{\fdoty_m|\theta }&=& \sigma^2 \kdelta_{nm} & (\prope{uncorrelated}) %&
   \end{array}}
   }
@@ -638,17 +638,17 @@ Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fd
 Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fdotv_n$, and $\setY$ be defined as in \prefpp{def:sstat}.
 \thmbox{
   \mcom{\brbr{\begin{array}{FrclD}
-    (A). & \fy(t;\theta)                    &\eqd     & \fx(t) + \fv(t)     & and %& (\propb{additive})              & and
+    (A). & \fy(t;\theta)             &\eqd     & \fx(t) + \fv(t)     & and %& (\propb{additive})              & and
   \\(B). & \cov{\fv(t)}{\fv(u)}      &=        & \sigma^2\delta(t-u) & and %& (\propb{white})                 & and
   \\(C). & \fv(t)                    &\sim     & \pN{0}{\sigma^2}    & and %& (\propb{Gaussian})              & and
   \\(D). & \fx(t)                    &\subseteq& \linspan\Psi        & and %& ($\Psi$ \prope{spans} $\fx(t)$) & and
   \\(E). & \inprod{\fpsi_n}{\fpsi_m} &=        & \kdelta_{mn}        &     %& (\prope{orthonormal})
   \end{array}}}{\prope{additive white Gaussian} system}
   \implies
-  \brbl{\begin{array}{FrclD}
-       (1). & \fdoty_n(\theta)          &\sim& \pN{\fdotx_n(\theta)}{\sigma^2}     & (\prope{Gaussian})
-     \\(2). & \cov{\fdoty_n}{\fdoty_m } &=   & \sigma^2 \kdelta_{nm}               & (\prope{uncorrelated})
-     \\(3). & \mc{3}{l}{\psP\setn{\fdoty_n \land \fdoty_m} = \psP\setn{\fdoty_n}\psP\setn{\fdoty_m} & (\prope{independent})
+  \brbl{\begin{array}{FlD}
+    (1). & \fdoty_n(\theta)           \sim  \pN{\fdotx_n(\theta)}{\sigma^2}            & (\prope{Gaussian})
+  \\(2). & \cov{\fdoty_n}{\fdoty_m }  =     \sigma^2 \kdelta_{nm}                      & (\prope{uncorrelated})
+  \\(3). & \psP\setn{\fdoty_n \land \fdoty_m} = \psP\setn{\fdoty_n}\psP\setn{\fdoty_m} & (\prope{independent})
   \end{array}}
   }
 \end{theorem}
@@ -656,7 +656,7 @@ Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fd
 \begin{enumerate}
   \item Proof for (1) follow because the operations are \prope{linear} on processes are \prope{Gaussian} (hypothesis C).
 
-  \item 
+  \item
     \begin{align*}
        \pE{\fdotv_{n}}           &= 0                      && \text{by \prope{AWN} properties and \prefp{thm:awn_stats}}
      \\\fdoty_n                  &= \fdotx_n  + \fdotv_n   && \text{by \prope{AWN} properties and \prefp{thm:awn_stats}}
@@ -670,7 +670,7 @@ Let $\Psi$, $\rvy(t;\theta)$, $\rvx(t)$, $\rvv(t)$, $\fdoty_n$, $\fdotx_n$, $\fd
 \end{proof}
 
 %======================================
-\section{Optimal symbol estimation}
+\section{ML estimates}
 \label{sec:awgn_est}
 \index{maximum likelihood estimation}
 %======================================
@@ -736,8 +736,8 @@ Let $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
      && \text{by \prefpp{thm:sstat}}
    \\&= \argmax_{\estT}
          \left[ -\norm{\rvy(t;\theta)-\rvx(t;\theta)}^2 \right]
-     && \text{by \thme{Plancheral's formula}}
-     && \text{\xref{thm:plancherel}}
+     && \text{by \thme{Plancheral's formula} 
+              \xref{thm:plancherel}}
    \\&= \argmax_{\estT}
          \left[ -\norm{\rvy(t;\theta)}^2 +2\Real\inprod{\rvy(t;\theta)}{\rvx(t;\theta)}-\norm{\rvx(t;\theta)}^2 \right]
    \\&= \argmax_{\estT}
@@ -748,31 +748,26 @@ Let $\estML$  be the \fncte{ML estimate} \xref{def:estML} of $\theta$.
 
 %---------------------------------------
 \begin{theorem}[\thmd{ML amplitude estimation}]
-\label{thm:estML_amplitude}
 \footnote{
   \citerppg{srv}{158}{159}{013125295X}
   }
-\index{maximum likelihood estimation!amplitude}
+\label{thm:estML_amplitude}
 %---------------------------------------
-Let $\opSys$ be an additive white gaussian noise system
-such that
-\begin{align*}
-     \rvy(t;\theta)     &= \rvx(t;a) + \fv(t)
-   \\\rvx(t;a)   &\eqd  a  \sym(t).
-\end{align*}
-Then
-\thmbox{\begin{array}{rclM}
-  \estML[a]    &=&  \frac{1}{\norm{\lambda(t)}^2} \inprod{\rvy(t;\theta)}{\lambda(t)}
-               &    (optimal ML-estimate of $a$)
-             \\&=&  \frac{1}{\norm{\sym(t)}^2} \sum_{n=1}^\xN \fdoty_n \fdotlam_n
-               & %\text{(optimal ML-estimate of $a$)}
-\\\pE\estML[a] &=& a
-               &   ($\estML[a]$ is \propb{unbiased})
-\\\var\estML[a]&=& \frac{\sigma^2}{\norm{\sym(t)}^2}
-               &  (variance of estimate $\estML[a]$)
-\\\var\estML[a]&=& \mbox{CR lower bound}
-               &   ($\estML[a]$ is an {\bf \prope{efficient} estimate})
-\end{array}}
+Let $\opSys$ be an additive white gaussian noise system.
+\thmbox{
+  \brb{\begin{array}{Frc>{\ds}lD}
+     (A). & \mc{3}{M}{$\fv(t)$ is \prope{AWGN}}       & and
+   \\(B). & \rvy(t;a) &=&     \rvx(t;a) + \fv(t) & and
+   \\(C). & \rvx(t;a)      &\eqd&  a  \sym(t).        &
+  \end{array}}
+  \implies
+  \brb{\begin{array}{Frc>{\ds}lM}
+    (1). & \estML[a]    &=&  \frac{1}{\norm{\sym(t)}^2} \sum_{n=1}^\xN \fdoty_n \fdotlam_n &
+  \\(2). & \pE\estML[a] &=& a                                    &   (\prope{unbiased})
+  \\(3). & \var\estML[a]&=& \frac{\sigma^2}{\norm{\sym(t)}^2}    &
+  \\(4). & \var\estML[a]&=& \mbox{CR lower bound}                &   (\prope{efficient})
+  \end{array}}
+  }
 \end{theorem}
 
 \begin{proof}\\
@@ -960,59 +955,63 @@ if and only if
   }
 \index{maximum likelihood estimation!phase}
 %---------------------------------------
-Let $\opSys$ be an additive white gaussian noise system
-such that
-$\begin{array}[t]{rcl}
-     \rvy(t;\theta)      &=& \fx(t;\phi) + \fv(t)
-   \\\rvx(t;\phi) &=& A\cos(2\pi f_ct +  \phi).
-\end{array}$
-\\
-Then the optimal ML-estimate of parameter $ \phi $ is
 \thmbox{
+  \brb{\begin{array}{Frc>{\ds}lD}
+     (A). & \mc{3}{M}{$\fv(t)$ is \prope{AWGN}}        & and
+   \\(B). & \rvy(t;\phi) &=&     \rvx(t;\phi) + \fv(t) & and
+   \\(C). & \rvx(t;\phi) &\eqd&  A\cos(2\pi f_ct +  \phi) &  
+  \end{array}}
+  \implies
+  \brb{
    \estML[\phi]
       =   -\atan\brp{
            \frac{\inprod{\rvy(t;\theta)}{\sin(2\pi f_ct)}}
                 {\inprod{\rvy(t;\theta)}{\cos(2\pi f_ct)}}
            }
-   }
+   }}
 \end{theorem}
 \begin{proof}
 \begin{align*}
    \estML[\phi]
      &= \argmax_\phi
-         \brs{ 2\inprod{\rvy(t;\theta)}{\rvx(t;\theta)}-\norm{\rvx(t;\phi)}^2 }
+         \brs{ 2\inprod{\rvy(t;\phi)}{\rvx(t;\phi)}-\norm{\rvx(t;\phi)}^2 }
      && \text{by \prefpp{thm:estML_general}}
    \\&= \argmax_\phi
-         \brs{ 2\inprod{\rvy(t;\theta)}{\rvx(t;\phi)} }
+         \brs{ 2\inprod{\rvy(t;\phi)}{\rvx(t;\phi)} }
      && \text{because $\norm{\rvx(t;\phi)}$ does not depend on $\phi$}
    \\&= \arg_\phi
-         \brs{ \pderiv{}{\phi} \inprod{\rvy(t;\theta)}{\rvx(t;\phi)} = 0 }
+         \brs{ \pderiv{}{\phi} \inprod{\rvy(t;\phi)}{\rvx(t;\phi)} = 0 }
    \\&= \arg_\phi
-         \brs{ \inprod{\rvy(t;\theta)}{\pderiv{}{\phi} \rvx(t;\phi)} = 0 }
-     && \text{because $\inprod{\cdot}{\cdot}$ is a linear operator}
+         \brs{ \inprod{\rvy(t;\phi)}{\pderiv{}{\phi} \rvx(t;\phi)} = 0 }
+     && \text{because $\inprodn$ is \prope{linear}}
    \\&= \arg_\phi
-         \brs{\inprod{\rvy(t;\theta)}{\pderiv{}{\phi} A\cos(2\pi f_ct+\phi)} = 0 }
+         \brs{\inprod{\rvy(t;\phi)}{\pderiv{}{\phi} A\cos(2\pi f_ct+\phi)} = 0 }
+     && \text{by definition of $\fx(t;\phi)$}
    \\&= \arg_\phi
-         \brs{\inprod{\rvy(t;\theta)}{-A\sin(2\pi f_ct+\phi)} = 0 }
+         \brs{\inprod{\rvy(t;\phi)}{-A\sin(2\pi f_ct+\phi)} = 0 }
+     && \text{because $\pderiv{}{\phi} \cos(x)=-\sin(x)$}
    \\&= \arg_\phi
-         \left[ -A\inprod{\rvy(t;\theta)}{\cos(2\pi f_ct)\sin\phi+\sin(2\pi f_ct)\cos\phi} = 0 \right]
+         \brs{ -A\inprod{\rvy(t;\phi)}{\cos(2\pi f_ct)\sin\phi+\sin(2\pi f_ct)\cos\phi} = 0 }
+    %&& \text{because $\sin(x+y)=\sin x \cos y + \cos x \sin y$}
+     && \text{by \thme{double angle formulas}}
+     && \text{\ifsxref{harTrig}{thm:trig_double}}
    \\&= \arg_\phi \brs{
-           \sin\phi\inprod{\rvy(t;\theta)}{\cos(2\pi f_ct)} =
-          -\cos\phi\inprod{\rvy(t;\theta)}{\sin(2\pi f_ct)}
+           \sin\phi\inprod{\rvy(t;\phi)}{\cos(2\pi f_ct)} =
+          -\cos\phi\inprod{\rvy(t;\phi)}{\sin(2\pi f_ct)}
            }
    \\&= \arg_\phi \brs{
            \frac{\sin\phi}{\cos\phi} =
-          -\frac{\inprod{\rvy(t;\theta)}{\sin(2\pi f_ct)}}
-                {\inprod{\rvy(t;\theta)}{\cos(2\pi f_ct)}}
+          -\frac{\inprod{\rvy(t;\phi)}{\sin(2\pi f_ct)}}
+                {\inprod{\rvy(t;\phi)}{\cos(2\pi f_ct)}}
            }
    \\&= \arg_\phi \brs{
            \tan\phi =
-          -\frac{\inprod{\rvy(t;\theta)}{\sin(2\pi f_ct)}}
-                {\inprod{\rvy(t;\theta)}{\cos(2\pi f_ct)}}
+          -\frac{\inprod{\rvy(t;\phi)}{\sin(2\pi f_ct)}}
+                {\inprod{\rvy(t;\phi)}{\cos(2\pi f_ct)}}
            }
    \\&=  -\atan\brp{
-           \frac{\inprod{\rvy(t;\theta)}{\sin(2\pi f_ct)}}
-                {\inprod{\rvy(t;\theta)}{\cos(2\pi f_ct)}}
+           \frac{\inprod{\rvy(t;\phi)}{\sin(2\pi f_ct)}}
+                {\inprod{\rvy(t;\phi)}{\cos(2\pi f_ct)}}
            }
 \end{align*}
 \end{proof}
@@ -1078,7 +1077,7 @@ If $\estML$ is unbiased ($\pE\estML=\theta$), we can use
 the \vale{Cram/'er-Rao bound} to find a lower bound on the variance:
 
 \begin{align*}
-   \var\estML
+  \var\estML
      &\eqd \pE\brs{\estML-\pE\estML}^2
    \\&= \pE\brs{\estML-\theta}^2
    \\&\ge \frac{-1}{\ds\pE\brp{
@@ -1089,12 +1088,14 @@ the \vale{Cram/'er-Rao bound} to find a lower bound on the variance:
               \pderiv{^2}{\theta^2} \ln
               \pdfpb{\fdoty_1, \fdoty_2,\ldots,\fdoty_{\xN}|\fx(t;\theta)}
            }}
-     && \text{by \thme{Sufficient Statistic Theorem}}
-     && \text{\xref{thm:sstat}}
+     && \begin{array}{@{}M}
+         by \thme{Sufficient Statistic Theorem}\\
+         \xref{thm:sstat}
+        \end{array}
    \\&=   \frac{-1}{\ds\pE\brp{
               \pderiv{^2}{\theta^2} \ln\left[
               \left(\frac{1}{\sqrt{2\pi\sigma^2}} \right)^\xN
-              \exp{\frac{-1}{2\sigma^2}\sum_{n=1}^\xN [\fdoty_n-\fg(\theta)]^2 }\right]
+              \exp\brp{\frac{-1}{2\sigma^2}\sum_{n=1}^\xN [\fdoty_n-\fg(\theta)]^2 }\right]
            }}
      && \begin{array}{@{}M}
          by \prope{AWGN} hypothesis\\
@@ -1185,6 +1186,43 @@ if and only if
 \end{proof}
 
 %======================================
+\section{Example data}
+%======================================
+\begin{longtable}{|l|}
+\hline
+``Pop Goes the World" song by Men Without Hats
+\\\includegraphics[width=\tw-10mm]{graphics/MenWithoutHats_PopGoesWorld.jpg}
+\\\hline
+  Earthquake data
+\\\includegraphics[width=\tw-10mm,height=50mm]{graphics/earthquake_kapi_20180928.pdf}\footnote{\url{https://www.iris.edu/wilber3/find_stations/10953070}}
+\\\hline
+  Sunspot data
+\\\includegraphics[width=\tw-10mm,height=50mm]{graphics/sunspots_1749-2004.pdf}\footnote{\url{https://d32ogoqmya1dw8.cloudfront.net/files/introgeo/teachingwdata/examples/GreenwichSSNvstime.txt}}
+\\\hline
+  Dow Jones Industrial Average
+\\\includegraphics[width=\tw-10mm,height=50mm]{graphics/dji30_20171006-20181004.pdf}
+\\\hline
+  Ebola Sequence
+\\\includegraphics[width=\tw-10mm]{graphics/dna_ebola_51_seq.pdf}
+\\\hline
+\end{longtable}
+
+%\includegraphics[width=\tw-10mm]{graphics/fdie_5eed_51_seq.pdf}
+
+%\footnote{
+%\begin{lstlisting}
+%#include<stdlib.h>
+%...
+%srand(0x5EED);
+%for(n=0; n<N; n++){x[n] = 'A' + rand()%6;}
+%\end{lstlisting}
+%  }
+%\vfill
+
+
+
+
+%======================================
 \section{Colored noise}
 \index{noise!colored}
 %======================================
@@ -1195,8 +1233,7 @@ invalid.
 But there is still hope for colored noise.
 Processing colored signals can be accomplished using two techniques:
 \begin{enume}
-   \item Karhunen-Lo\`{e}ve basis functions
-      \footnote{{\bf Karhunen-Lo\`{e}ve}: \prefpp{sec:KL}}
+   \item Karhunen-Lo/`eve basis functions \xref{sec:KL}
    \item whitening filter
 \footnote{
    \begin{tabular}[t]{ll}
@@ -1207,13 +1244,13 @@ Processing colored signals can be accomplished using two techniques:
 \end{enume}
 
 \paragraph{Karhunen-Lo\`{e}ve.}
-If the noise is white, the set $\{\inprod{\rvy(t;\theta)}{\fpsi_n(t)}\}$
+If the noise is white, the set $\set{\inprod{\rvy(t;\theta)}{\fpsi_n(t)}}{n=1,2,\ldots,\xN}$
 is a \prope{sufficient statistic} regardless of which
-set $\{\fpsi_n(t)\}$ of orthonormal basis functions are used.
+set $\setn{\fpsi_n(t)}$ of orthonormal basis functions are used.
 If the noise is colored, and if $\{\fpsi_n(t)\}$ satisfy the
 Karhunen-Lo\`{e}ve criterion
-   \[ \int_{t_2}\Rxx(t_1,t_2)\fpsi_n(t_2)\dd{t_2} = \lambda_n \fpsi_n(t_1) \]
-then $\{\inprod{\rvy(t;\theta)}{\fpsi_n(t)}\}$ is still a sufficient statistic.
+\\\indentx$\ds\int_{t_2}\Rxx(t_1,t_2)\fpsi_n(t_2)\dd{t_2} = \lambda_n \fpsi_n(t_1)$\\
+then $\setn{\inprod{\rvy(t;\theta)}{\fpsi_n(t)}}$ is still a sufficient statistic.
 
 \paragraph{Whitening filter.}
 The whitening filter makes the received signal $\rvy(t;\theta)$ statistically white
@@ -1283,18 +1320,18 @@ Let the \hie{signal to noise ratio} SNR be defined as
                       \left[\int_{\estT} n(\estT)f^\ast(\estT)\;du\right]^\ast}
                 }
    \\&=    \frac{\abs{\inprod{\rvx(t)}{\rvx(t)}}^2}
-                {\pE\brs{\int_{t\in\R} \int_{\estT} \fv(t)n^\ast(\estT)\rvx^\ast(t)\rvx(\estT)\;dtdu}}
+                {\pE\brs{\int_{t\in\R} \int_{\estT} \fv(t)n^\ast(\estT)\rvx^\ast(t)\rvx(\estT)\;\dt\du}}
    \\&=    \frac{\abs{\inprod{\rvx(t)}{f(t)}}^2}
-                {\int_{t\in\R} \int_{\estT} \pE\brs{\fv(t)n^\ast(\estT)}\rvx^\ast(t)\rvx(\estT)\;dtdu}
+                {\int_{t\in\R} \int_{\estT} \pE\brs{\fv(t)n^\ast(\estT)}\rvx^\ast(t)\rvx(\estT)\;\dt\du}
    \\&=    \frac{\abs{\inprod{\rvx(t)}{\rvx(t)}}^2}
-                {\int_{t\in\R} \int_{\estT} \frac{1}{2}N_o\delta(t-\estT) \rvx^\ast(t)\rvx(\estT)\;dtdu}
+                {\int_{t\in\R} \int_{\estT} \frac{1}{2}N_o\delta(t-\estT) \rvx^\ast(t)\rvx(\estT)\;\dt\du}
    \\&=    \frac{\abs{\inprod{\rvx(t)}{\rvx(t)}}^2}
                 {\frac{1}{2}N_o \int_{t\in\R} \rvx^\ast(t)\rvx(t)\dt}
    \\&=    \frac{\abs{\inprod{\rvx(t)}{\rvx(t)}}^2}
                 {\frac{1}{2}N_o \norm{\rvx(t)}^2}
    \\&\le  \frac{\abs{\norm{\rvx(t)}\;\norm{\rvx(t)}}^2}
                 {\frac{1}{2}N_o \norm{\rvx(t)}^2}
-     &&    \text{by \thme{Cauchy-Schwarz Inequality}}
+     &&    \text{by \ineqe{Cauchy-Schwarz Inequality}}
      &&    \text{\ifsxref{vsinprod}{thm:cs}}
    \\&=    \frac{2\norm{\rvx(t)}^2}
                 {N_o }
