--- a/common/netdet.tex
+++ b/common/netdet.tex
@@ -32,7 +32,7 @@ For detection, we need
 \end{definition}
 
 \begin{align*}
-  cost(h;P)
+ \fCost(h;P)
     &= \min_\ssetD \sum_i \pPa{X \in \setD_i}{H\ne h_i}
   \\&= \min_\ssetD \sum_i \pPc{X \in \setD_i}{H\ne h_i} \pP{H\ne h_i}
   \\&= \min_\ssetD \sum_i 
@@ -41,23 +41,16 @@ For detection, we need
   \\
   \\
   \hat{h}
-    &= \arg_h cost(h;P)
+    &= \arg_h \fCost(h;P)
 \end{align*}
-
-
-
-
 
 %=======================================
 \section{Joint Gaussian Model}
 %=======================================
-
-
-
 Assume convexity \ldots
 \begin{align*}
   \ssetD
-    &= \arg_\ssetD\min_\ssetD cost(h;P)
+    &= \argmin_\ssetD \fCost(h;P)
   \\&= \arg_\ssetD\brb{\pderiv{}{\ssetD} \sum_i \int_{\setD_i} \pp(\vx|H\ne h_i)\mcom{\pp(H\ne h_i)}{$c$} d\vx=0}
   \\&= \arg_\ssetD\brb{\pderiv{}{\ssetD}c\sum_i \int_{\setD_i} \pp(\vx|H\ne h_i) d\vx                         =0}
   \\&= \arg_\ssetD\brb{\pderiv{}{\ssetD} \sum_i\brs{1- \sum_{j\ne i}\int_{\setD_i} \pp(\vx|H=h_i) d\vx}       =0}
@@ -99,7 +92,7 @@ Assume convexity \ldots
 For two variable Gaussian \ldots
 
 \begin{align*}
-  cost
+  \fCost
     &= \min_\ssetD \sum_i \int_{\setD_i} \pp(\vx|H\ne h_i)\mcom{\pp(H\ne h_i)}{$c$} d\vx
   \\&= \min_\ssetD c\sum_i \int_{\setD_i} \pp(\vx|H\ne h_i) d\vx 
   \\&= \min_\ssetD c\sum_i\brs{1- \sum_{j\ne i}\int_{\setD_i} \pp(\vx|H=h_i) d\vx} 
