using wavelets to whiten data stub and references

--- a/common/bib/wavelets.bib
+++ b/common/bib/wavelets.bib
@@ -504,6 +504,8 @@
   }
 
 @book{mallat,
+  isbn         = {9780124666061},
+  isbn10       = {012466606X},
   author       = {St{/'e}phane G. Mallat},
   title        = {A Wavelet Tour of Signal Processing},
   edition      = {2},
@@ -511,8 +513,6 @@
   year         = {1999},
   pages        = {637},
   month        = {September 15},
-  isbn         = {0-12-466606-X},
-  isbn13       = {978-0124666061},
   urlp         = {http://www.cmap.polytechnique.fr/~mallat/},
   url          = {http://books.google.com/books?vid=ISBN012466606X},
   urlw         = {http://www.worldcat.org/isbn/012466606X},
@@ -692,13 +692,13 @@
   }
 
 @book{vidakovic,
+  isbn         = {9780471293651},
+  isbn10       = {0471293652},
   author       = {Brani Vidakovic},
   title        = {Statistical Modeling by Wavelets},
   publisher    = {John Wiley \& Sons, Inc},
   address      = {New York},
   year         = {1999},
-  isbn         = {0-471-29365-2},
-  isbn13       = {978-0471293651},
   urlp         = {http://zoe.bme.gatech.edu/~bv20/},
   urlw         = {http://www.worldcat.org/isbn/0471293652},
   url          = {http://www.amazon.com/dp/0471293652},
@@ -723,15 +723,14 @@
   }
 
 @book{walter,
+  isbn         = {9781584882275},
+  isbn10       = {1584882271},
   author       = {Gilbert G. Walter and XiaoPing Shen},
   title        = {Wavelets and Other Orthogonal Systems},
   edition      = {2},
   publisher    = {Chapman and Hall/CRC}, 
   address      = {New York}, 
   year         = {2001},
-  isbn         = {1-58488-227-1},
-  isbn13       = {978-1584882275},
-  note         = {Library QA403.3.W34 2000},
   urlp         = {http://www.uwm.edu/~ggw/},
   url          = {http://books.google.com/books?vid=ISBN1584882271},
   urlw         = {http://www.worldcat.org/isbn/1584882271},
