--- a/common/kl_basis.tex
+++ b/common/kl_basis.tex
@@ -1243,20 +1243,26 @@ Processing colored signals can be accomplished using two techniques:
    }
 \end{enume}
 
-\paragraph{Karhunen-Lo\`{e}ve.}
-If the noise is white, the set $\set{\inprod{\rvy(t;\theta)}{\fpsi_n(t)}}{n=1,2,\ldots,\xN}$
+\paragraph{Karhunen-Lo/`eve.}
+If the noise is \prope{white}, the set $\set{\inprod{\rvy(t;\theta)}{\fpsi_n(t)}}{n=1,2,\ldots,\xN}$
 is a \prope{sufficient statistic} regardless of which
 set $\setn{\fpsi_n(t)}$ of orthonormal basis functions are used.
-If the noise is colored, and if $\{\fpsi_n(t)\}$ satisfy the
-Karhunen-Lo\`{e}ve criterion
-\\\indentx$\ds\int_{t_2}\Rxx(t_1,t_2)\fpsi_n(t_2)\dd{t_2} = \lambda_n \fpsi_n(t_1)$\\
-then $\setn{\inprod{\rvy(t;\theta)}{\fpsi_n(t)}}$ is still a sufficient statistic.
+If the noise is \prope{colored}, and if $\{\fpsi_n(t)\}$ satisfy the
+Karhunen-Lo/`eve criterion
+\\\indentx$\ds\int_{t_2}\Rxx(t,u)\fpsi_n(u)\du = \lambda_n \fpsi_n(t)$\\
+then the set $\setn{\inprod{\rvy(t;\theta)}{\fpsi_n(t)}}$ is still a \prope{sufficient statistic}.
 
 \paragraph{Whitening filter.}
 The whitening filter makes the received signal $\rvy(t;\theta)$ statistically white
 (uncorrelated in time). In this case,
 any orthonormal basis set can be used to generate sufficient statistics.
 
-
-
+\paragraph{Wavelets.}
+Wavelets have the property that they tend to whiten data. 
+For more information, see 
+\citerppgc{vidakovic}{10}{14}{9780471293651}{``Example 1.2.5 Wavelets whiten data"},
+\citeP{johnstone1997},
+\citerg{mallat}{9780124666061},
+\citerppgc{walter}{329}{350}{9781584882275}{``Chapter 14 Orthogonal Systems and Stochastic Processes"},
+\citeP{wornell1992} (last 4 references cited by B. Vidakovic).
 
