--- a/common/bib/digcom.bib
+++ b/common/bib/digcom.bib
@@ -328,6 +328,21 @@
   language     = {English},
   }
 
+@book{haykin2014,
+  isbn         = {9781118476772},
+  isbn10       = {1118476778},
+  author       = {Simon Haykin},
+  title        = {Digital Communication Systems},
+  edition      = {4},
+  year         = {2014},
+  publisher    = {Wiley Global Education},
+  pages        = {560},
+  url          = {http://books.google.com/books?vid=isbn9781118476772},
+  urlw         = {http://www.worldcat.org/isbn/9781118476772},
+  urla         = {http://www.amazon.com/dp/9781118476772},
+  language     = {English},
+  }
+
 @book{ifeachor1993,
   isbn         = {020154413X},
   title        = {Digital Signal Processing: A Practical Approach},
