--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -75,6 +75,7 @@ that it's linear operator birthright grants it \xref{cor:pE_linop}.
 %---------------------------------------
 \begin{theorem}[\thmd{Linearity of $\pE$}]
 \footnote{
+  \citerpgc{haykin2014}{107}{9781118476772}{``{\scshape Property} 1 Linearity"},
   \citerpc{wilks1963}{73}{\textsection 3.2 ``Mean value of a random variable"}
   }
 \label{thm:pE}
