--- a/common/kl_basis.tex
+++ b/common/kl_basis.tex
@@ -1260,9 +1260,10 @@ any orthonormal basis set can be used to generate sufficient statistics.
 \paragraph{Wavelets.}
 Wavelets have the property that they tend to whiten data. 
 For more information, see 
-\citerppgc{vidakovic}{10}{14}{9780471293651}{``Example 1.2.5 Wavelets whiten data"},
-\citeP{johnstone1997},
-\citerg{mallat}{9780124666061},
 \citerppgc{walter}{329}{350}{9781584882275}{``Chapter 14 Orthogonal Systems and Stochastic Processes"},
-\citeP{wornell1992} (last 4 references cited by B. Vidakovic).
+\citerg{mallat}{9780124666061},
+\citeP{johnstone1997},
+\citeP{wornell1992}, and
+\citerppgc{vidakovic}{10}{14}{9780471293651}{``Example 1.2.5 Wavelets whiten data"}
+(first four references cited by B. Vidakovic).
 
