--- a/common/spectral_estimation.tex
+++ b/common/spectral_estimation.tex
@@ -23,3 +23,7 @@ Quality of spectral estimators\footnote{
   \\\ope{Bartlett Method}:           & Q &=& 1.11\xN\Delta f
   \\\ope{Blackman-Tukey Method}:     & Q &=& 2.34\xN\Delta f
 \end{array}}
+
+
+BT-product:
+\citerppgc{haykin2014}{25}{28}{9781118476772}{\textsection ``2.4 The Inverse Relationship between Time-Domain and Frequency-Domain Representations"}
