--- a/common/spectral_estimation.tex
+++ b/common/spectral_estimation.tex
@@ -25,5 +25,7 @@ Quality of spectral estimators\footnote{
 \end{array}}
 
 
-BT-product:
-\citerppgc{haykin2014}{25}{28}{9781118476772}{\textsection ``2.4 The Inverse Relationship between Time-Domain and Frequency-Domain Representations"}
+BT-product references:
+\citerppgc{haykin2014}{25}{28}{9781118476772}{\textsection ``2.4 The Inverse Relationship between Time-Domain and Frequency-Domain Representations"},
+\citerppgc{marple1987}{144}{146}{9780132141499}{\textsection ``\scshape5.4 Resolution and the Stability-Time-Bandwidth Product"}
+
